welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:9: error: ';' expected but 'else' found.
	if (isFacingTrail) { baisseBrosse() ; leveBrosse ; avance() else {
                                                                    ^